create and link global article stylesheet

--- a/process/paper-negative/index.html
+++ b/process/paper-negative/index.html
@@ -5,94 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Paper Negative</title>
   <link rel="icon" type="image/png" href="/assets/ascii-eye-fav.png" />
-  <style>
-    :root {
-      --ink: #151515;
-      --paper: #F1F1F1;
-    }
-
-    body {
-      margin: 0;
-      padding: 88px 32px 56px;
-      position: relative;
-      font-family: sans-serif;
-      background: var(--paper);
-      color: var(--ink);
-    }
-
-    .back-link {
-      position: absolute;
-      top: 32px;
-      left: 32px;
-      color: var(--ink);
-      text-decoration: none;
-      font-size: 16px;
-      font-weight: 700;
-      line-height: 1;
-    }
-
-    .back-link:hover {
-      opacity: 0.7;
-    }
-
-    main {
-      max-width: 90ch;
-      margin: 0 auto;
-    }
-
-    h1 {
-      margin: 0 0 20px;
-      font-size: clamp(40px, 8vw, 84px);
-      line-height: 0.95;
-    }
-
-    p {
-      margin: 0 0 16px;
-      line-height: 1.6;
-      font-size: 18px;
-    }
-
-    .equation-sample {
-      margin: 18px 0 24px;
-      font-size: 20px;
-      overflow-x: auto;
-    }
-
-    main h2 {
-      margin: 36px 0 12px;
-      font-size: clamp(28px, 5vw, 42px);
-      line-height: 1.1;
-    }
-
-    main h3 {
-      margin: 28px 0 10px;
-      font-size: clamp(22px, 4vw, 30px);
-      line-height: 1.2;
-    }
-
-    main a {
-      color: inherit;
-    }
-
-    .todo-figure {
-      margin: 18px 0 26px;
-    }
-
-    .todo-figure img {
-      width: 100%;
-      height: auto;
-      display: block;
-      border: 1px solid rgba(21, 21, 21, 0.25);
-      box-shadow: 0 10px 24px rgba(0, 0, 0, 0.12);
-      background: #ddd;
-    }
-
-    .todo-figure figcaption {
-      margin-top: 8px;
-      font-size: 15px;
-      line-height: 1.5;
-    }
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="/article.css" />
   <script>
     window.MathJax = {
       tex: {
@@ -142,6 +58,7 @@
   <a class="back-link" href="/process/">back</a>
   <main>
     <h1>Paper Negatives</h1>
+    <p class="byline">Jack Long</p>
     <p>In December of 2025, I received a Hasselblad cut film adapter (41017) and four film holders (51012), compatible with the 500-series camera bodies.</p>
     <figure class="todo-figure">
       <img src="https://picsum.photos/seed/paper-negative-todo-1/1200/800" alt="TODO: film back, film holder images." loading="lazy" />
