--- a/process/darkroom-printing/index.html
+++ b/process/darkroom-printing/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Darkroom Printing</title>
   <link rel="icon" type="image/png" href="/assets/ascii-eye-fav.png" />
+  <link rel="stylesheet" href="/article.css" />
   <style>
     :root {
       --ink: #151515;
