minor article style edits

--- a/process/paper-negative/index.html
+++ b/process/paper-negative/index.html
@@ -57,16 +57,16 @@
 <body>
   <a class="back-link" href="/process/">back</a>
   <main>
-    <h1>Paper Negatives</h1>
+    <h1>Paper Negative (WIP)</h1>
     <p class="byline">Jack Long</p>
     <p>In December of 2025, I received a Hasselblad cut film adapter (41017) and four film holders (51012), compatible with the 500-series camera bodies.</p>
     <figure class="todo-figure">
-      <img src="https://picsum.photos/seed/paper-negative-todo-1/1200/800" alt="TODO: film back, film holder images." loading="lazy" />
+      <img src="https://picsum.photos/seed/paper-negative-todo-1/1200/800?grayscale" alt="TODO: film back, film holder images." loading="lazy" />
       <figcaption><strong>TODO:</strong> TODO: film back, film holder images.<br><strong>Caption:</strong> (caption not provided)</figcaption>
     </figure>
     <p>In searching for ways of using these items, I stumbled upon some paper negatives I had shot in September of 2025 on a pinhole camera, as part of a class assignment.</p>
     <figure class="todo-figure">
-      <img src="https://picsum.photos/seed/paper-negative-todo-2/1200/800" alt="TODO: pinhole negatives, positives." loading="lazy" />
+      <img src="https://picsum.photos/seed/paper-negative-todo-2/1200/800?grayscale" alt="TODO: pinhole negatives, positives." loading="lazy" />
       <figcaption><strong>TODO:</strong> TODO: pinhole negatives, positives.<br><strong>Caption:</strong> Pinhole negatives and contact-printed positives on Ilford MGRC Deluxe Pearl. Negatives were shot unfiltered and developed in Ilford Multigrade Developer 1:18, positives were developed in the same, but mixed to the standard 1:9.</figcaption>
     </figure>
     <p>It occurred to me that I could take much higher-quality images on photopaper using my own (or similar to my own, given that my 500C is waiting in limbo for a high-speed nylon shutter gear) Hasselblad body and lens than with a punctured tin can.</p>
@@ -75,12 +75,12 @@
     <p>Still, I found making paper negatives attractive because they represented a distillation of the standard analog photographic process (TODO: link to darkroom printing article). Instead of using two sets of photosensitive media, chemistry, tools, and times, I am able to produce an original image in exact same manner that I produce copies thereof. There is also an advantage, however slight, in the speed and portability of a medium-format system compared ot large-format. The cameras are smaller and lenses, for the most part, are faster, allowing for images to be made outside of the traditional studio or static landscape environments.</p>
     <p>My class in September developed pinhole paper negatives in diluted chemistry to tame the high contrast of the photopaper, especially when exposed to daylight <a href="#source-2">[2]</a>. In standard developer, any exposure long enough to hit the maximum density of the paper (Dmax) tended to leave very little detail in highlights of the positive image, requiring severe underexposure and limiting the already-slim dynamic range of the paper negative. The simplest fix, as determined by the Intro Photography instructor team, was to have students develop in half-strength developer instead.</p>
     <figure class="todo-figure">
-      <img src="https://picsum.photos/seed/paper-negative-todo-3/1200/800" alt="TODO: ilford MGRC datasheet frequency response [2]" loading="lazy" />
+      <img src="https://picsum.photos/seed/paper-negative-todo-3/1200/800?grayscale" alt="TODO: ilford MGRC datasheet frequency response [2]" loading="lazy" />
       <figcaption><strong>TODO:</strong> TODO: ilford MGRC datasheet frequency response <a href="#source-2">[2]</a><br><strong>Caption:</strong> (caption not provided)</figcaption>
     </figure>
     <p>Mixing diluted developer seemed to be a step away from the streamlined process that drew me to paper negatives in the first place, so I resolved to find another way to use the same chemistry for both my negatives and final prints. To take advantage of the entire dynamic range of the photopaper (i.e. expose enough to reach Dmax and still maintain usable contrast), I used a set of Ilford Multigrade enlarger filters placed in front of the lens during exposure.</p>
     <figure class="todo-figure">
-      <img src="https://picsum.photos/seed/paper-negative-todo-4/1200/800" alt="TODO: enlarger filters" loading="lazy" />
+      <img src="https://picsum.photos/seed/paper-negative-todo-4/1200/800?grayscale" alt="TODO: enlarger filters" loading="lazy" />
       <figcaption><strong>TODO:</strong> TODO: enlarger filters<br><strong>Caption:</strong> (caption not provided)</figcaption>
     </figure>
     <h2>Testing</h2>
@@ -88,7 +88,7 @@
     <h3>Interior: Exposure and Contrast</h3>
     <p>My first set of tests was to dial in proper exposure and contrast of the negatives in an evenly-lit interior scene: the Tjaden Hall DIM lab.</p>
     <figure class="todo-figure">
-      <img src="https://picsum.photos/seed/paper-negative-todo-5/1200/800" alt="TOOD: test 1" loading="lazy" />
+      <img src="https://picsum.photos/seed/paper-negative-todo-5/1200/800?grayscale" alt="TOOD: test 1" loading="lazy" />
       <figcaption><strong>TODO:</strong> TOOD: test 1<br><strong>Caption:</strong> the first paper negative test.</figcaption>
     </figure>
     <p>I found that, unfiltered, a slight underexposure of the scene (compared to the suggestion of an incident lightmeter at ISO 6) yielded the best results in standard <a href="#source-3">[3]</a> chemistry. With filters 0-2 applied, an exposure at or slightly (<1 stop) above metered was best. Ilford mentions that no exposure compensation is necessary for filters 00-3 <a href="#source-4">[4]</a>, but this appears to be true only when moving between filters 00-3. Per Ilford's Multigrade RC datasheet <a href="#source-2">[2]</a>, the paper is rated at ISO P500 unfiltered, and ISO P200 with filters 00-3 applied.  Therefore, the paper loses</p>
@@ -98,26 +98,26 @@ $$</div>
     <p>stops of light with filters 00-3 applied. The difference is higher for filters 4-5, but not relevant to my goal of reducing constrast. Note that the paper's ISO sensitivity is rated on a different scale to photographic film: Ilford rates Multigrade RC at an equivalent film ISO of 3-6 <a href="#source-2">[2]</a>.</p>
     <p>I liked the highlight detail of the #0 best when digitally inverted, especially compared to the pictured print calibration chart. This became my 'default' filter in further testing.</p>
     <figure class="todo-figure">
-      <img src="https://picsum.photos/seed/paper-negative-todo-6/1200/800" alt="TODO: #0 inverted negative, color print chart (iphone)" loading="lazy" />
+      <img src="https://picsum.photos/seed/paper-negative-todo-6/1200/800?grayscale" alt="TODO: #0 inverted negative, color print chart (iphone)" loading="lazy" />
       <figcaption><strong>TODO:</strong> TODO: #0 inverted negative, color print chart (iphone)<br><strong>Caption:</strong> #0 negative, digitally inverted, and color print calibration chart (captured on my iPhone 16).</figcaption>
     </figure>
     <p>NOTE: In most of these tests, I processed the negatives digitally. While not necessarily in line with my previously-stated goal of process distillation, I used digital inspection and processing to isolate the effects of my exposure and development on the negatives themselves, as opposed to later darkroom prints. While certainly an important step in the process, making darkroom prints requires additional technical consideration beyond producing a well-exposed negative. I decided to dial this only after I became confident in exposing consistent negatives.</p>
     <h2>Outdoors</h2>
     <p>For my second set of tests, I attempted to capture the effect of different lighting conditions on the paper negatives.</p>
     <figure class="todo-figure">
-      <img src="https://picsum.photos/seed/paper-negative-todo-7/1200/800" alt="TODO: Test 2" loading="lazy" />
+      <img src="https://picsum.photos/seed/paper-negative-todo-7/1200/800?grayscale" alt="TODO: Test 2" loading="lazy" />
       <figcaption><strong>TODO:</strong> TODO: Test 2<br><strong>Caption:</strong> the second paper negative test, encompassing a few more lighting conditions.</figcaption>
     </figure>
     <p>Outdoors, the higher blue light present in bright sunlight made a 1-stop underexposure (relative to meter readings at ISO 6) render best. To investigate the reciprocity failure so common in film, I found a poorly-lit scene at night on the under-construction White Hall. Exposed as metered, the combination of warmer interior and lamppost lighting and low-intensity reciprocity failure contributed to a Very Thin Negative. While there was some information in the highlights (extracted with significant digital post-processing), the final imaage is clearly distinct in quality from those taken during the day. If, during a masochist streak, I ever decide to shoot paper at nighttime again, I will increase my exposure by a few stops to accommodate the paper's lack of sensitivity to the red end of the visible spectrum and its low intensity reciprocity failure.</p>
     <figure class="todo-figure">
-      <img src="https://picsum.photos/seed/paper-negative-todo-8/1200/800" alt="Todo: white hall exposure, negative" loading="lazy" />
+      <img src="https://picsum.photos/seed/paper-negative-todo-8/1200/800?grayscale" alt="Todo: white hall exposure, negative" loading="lazy" />
       <figcaption><strong>TODO:</strong> Todo: white hall exposure, negative<br><strong>Caption:</strong> The negative produced by image number 4 above. Note the lack of any information in the highlights discernible to the naked eye.</figcaption>
     </figure>
     <p>Eagle-eyed viewers might notice the row of flat, thin images below. To investigate why they look like this, some math is in order.</p>
     <h2>A Diversion: What Strobe Guide Number Really Means</h2>
     <p>I shot the above scene with an on-camera Yongnuo YN560 speedlight rated at a maximum power guide number ($\text{GN}$) of 58m at ISO 100 and 135mm zoom <a href="#source-5">[5]</a>. At 50mm zoom (approximately the full-frame equivalent of the 80mm lens I have attached to the Hasselblad), the GN reduces to 42m. I</p>
     <figure class="todo-figure">
-      <img src="https://picsum.photos/seed/paper-negative-todo-9/1200/800" alt="TODO: gear flick" loading="lazy" />
+      <img src="https://picsum.photos/seed/paper-negative-todo-9/1200/800?grayscale" alt="TODO: gear flick" loading="lazy" />
       <figcaption><strong>TODO:</strong> TODO: gear flick<br><strong>Caption:</strong> The Hasselblad 500C and flash. For those who would like to replicate this setup, ensure that you purchase a PC-to-PC strobe sync cable, <em>not</em> a PC to 2.5mm cable, or any other combination.</figcaption>
     </figure>
     <p>We can express the guide number in terms of the subject's distance and the lens' f-stop:</p>
@@ -174,7 +174,7 @@ $$</div>
     <p>To account for any number of factors I could've gotten wrong with the above in the moment, I decided to expose at 1/4 power. Given the daylight-balanced 5600K light <a href="#source-5">[5]</a> from the YN560, and the outdoor results above, I expected overexposure at all but a #00 filter.</p>
     <p>This was not the case. While all negatives displayed some information, they were noticeably thin.</p>
     <figure class="todo-figure">
-      <img src="https://picsum.photos/seed/paper-negative-todo-10/1200/800" alt="TODO: negs compared to pos for mork leo flash" loading="lazy" />
+      <img src="https://picsum.photos/seed/paper-negative-todo-10/1200/800?grayscale" alt="TODO: negs compared to pos for mork leo flash" loading="lazy" />
       <figcaption><strong>TODO:</strong> TODO: negs compared to pos for mork leo flash<br><strong>Caption:</strong> Negatives and digitally-inverted positives for the #00 and unfiltered strobe exposures from Test 2.</figcaption>
     </figure>
     <p>This test wasn't quite conclusive, especially considering the odd patterns on the #1 and #0 images (perhaps accidental fogging of the paper while re-inserting the darkslide?).</p>
