--- a/process/photomosaic-sampler/index.html
+++ b/process/photomosaic-sampler/index.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Darkroom Printing</title>
+  <title>Photomosaic Sampler</title>
   <link rel="icon" type="image/png" href="/assets/ascii-eye-fav.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/article.css" />
 </head>
 <body>
   <a class="back-link" href="/process/">back</a>
   <main>
-    <h1>Darkroom Printing (WIP)</h1>
+    <h1>Photomosaic Sampler (WIP)
+    </h1>
     <p class="byline">Jack Long</p>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac sem sed eros pretium molestie. Cras lobortis est in turpis bibendum, non facilisis lacus tristique. Phasellus non risus et libero bibendum pharetra eu ac elit.</p>
