--- a/process/index.html
+++ b/process/index.html
@@ -129,15 +129,15 @@
   <main class="process-grid">
     <a class="process-card" href="/process/darkroom-printing/">
       <img src="/assets/process/darkroom-printing.png" alt="Darkroom Printing process image" />
-      <h2>Darkroom Printing</h2>
+      <h2>Darkroom Printing (WIP)</h2>
     </a>
     <a class="process-card" href="/process/paper-negative/">
       <img src="/assets/process/paperneg.png" alt="Paper Negative process image" />
-      <h2>Paper Negative</h2>
+      <h2>Paper Negative (WIP)</h2>
     </a>
-    <a class="process-card" href="/assets/process/photomosaic-sampler.png">
+    <a class="process-card" href="/process/photomosaic-sampler/">
       <img src="/assets/process/photomosaic-sampler.png" alt="Photomosaic Sampler process image" />
-      <h2>Photomosaic Sampler</h2>
+      <h2>Photomosaic Sampler (WIP)</h2>
     </a>
   </main>
 </body>
