fix about image again

--- a/about/index.html
+++ b/about/index.html
@@ -13,14 +13,14 @@
     :root {
       --about-texture-opacity: 1;
       --about-ink-overlay-opacity: 0.8;
-      --indacar-size: 20vw;
-      --indacar-size-mobile: 38vw;
-      --indacar-offset-top: 8px;
-      --indacar-offset-left: -190px;
+      --indacar-size: 40vw;
+      --indacar-size-mobile: 70vw;
+      --indacar-offset-top: -80px;
+      --indacar-offset-left: -250px;
       --indacar-offset-bottom: -50px;
       --indacar-text-gap-right: 24px;
       --indacar-shape-margin: 30px;
-      --indacar-offset-left-mobile: 0px;
+      --indacar-offset-left-mobile: -100px;
       --indacar-offset-bottom-mobile: 12px;
       --indacar-text-gap-right-mobile: 14px;
       --indacar-shape-margin-mobile: 10px;
@@ -122,7 +122,7 @@
       height: auto;
       display: block;
       margin: var(--indacar-offset-top) var(--indacar-text-gap-right) var(--indacar-offset-bottom) var(--indacar-offset-left);
-      shape-outside: url("/assets/about/indacar_transp.webp");
+      shape-outside: url("/assets/about/inthecar.webp");
       shape-image-threshold: 0.25;
       shape-margin: var(--indacar-shape-margin);
     }
@@ -221,7 +221,7 @@
   <a class="about-back-link" href="/">back</a>
   <main class="bio-page">
     <h1>About</h1>
-    <img class="indacar-wrap" src="/assets/about/indacar_transp.webp" alt="" aria-hidden="true" />
+    <img class="indacar-wrap" src="/assets/about/inthecar.webp" alt="" aria-hidden="true" />
 
     <h2></h2>
     <p>
