final paper neg edits

--- a/process/index.html
+++ b/process/index.html
@@ -127,18 +127,18 @@
   <a class="back-link" href="/">back</a>
   <h1>Process</h1>
   <main class="process-grid">
-    <a class="process-card" href="/process/darkroom-printing/">
+    <!-- <a class="process-card" href="/process/darkroom-printing/">
       <img src="/assets/process/darkroom-printing.png" alt="Darkroom Printing process image" />
       <h2>Darkroom Printing (WIP)</h2>
-    </a>
+    </a> -->
     <a class="process-card" href="/process/paper-negative/">
       <img src="/assets/process/paperneg.png" alt="Paper Negative process image" />
-      <h2>Paper Negative (WIP)</h2>
-    </a>
+      <h2>Paper Negative</h2>
+    <!-- </a>
     <a class="process-card" href="/process/photomosaic-sampler/">
       <img src="/assets/process/photomosaic-sampler.png" alt="Photomosaic Sampler process image" />
       <h2>Photomosaic Sampler (WIP)</h2>
-    </a>
+    </a> -->
   </main>
 </body>
 </html>
