--- a/process/index.html
+++ b/process/index.html
@@ -133,7 +133,7 @@
     </a> -->
     <a class="process-card" href="/process/paper-negative/">
       <img src="/assets/process/paperneg.png" alt="Paper Negative process image" />
-      <h2>Paper Negative</h2>
+      <h2>Medium-Format Paper Negatives</h2>
     <!-- </a>
     <a class="process-card" href="/process/photomosaic-sampler/">
       <img src="/assets/process/photomosaic-sampler.png" alt="Photomosaic Sampler process image" />
