--- a/about/index.html
+++ b/about/index.html
@@ -226,16 +226,12 @@
     <h2></h2>
     <p>
       I'm an engineering student at Cornell University exploring self-expression
-      through a variety of photographic media. My personal work focuses on how modern software and hardware 
-      tools can inspire and augment analog processes, and the creation of unsettling images in familiar spaces. 
+      through a variety of photographic media. My personal work focuses on creation of unsettling images in familiar spaces, 
+      and how modern software and hardware tools can inspire and augment analog processes. 
     </p>
 
     <p>
-      My analog images are captured on 35mm and medium-format film, as well as directly to black and white negative photopaper. I shoot with a 
-      Minolta X-370 and Hasselblad 500C inherited from both sides of my family, as well as a Nikon F-801 and Konica Autoreflex TC that I have maintained
-      and modified extensively. <br><br>
-
-      I make silver gelatin prints through traditional B&W optical enlargement on Ilford Multigrade paper. Digital images are captured on Canon, Sony, and Fujifilm SLR or mirrorless systems. 
+    My analog images are captured on 35mm and medium-format film, as well as directly to black and white negative photopaper. I make silver gelatin prints through traditional optical enlargement. 
     </p>
 
     <h2>Services</h2>
