--- a/about/index.html
+++ b/about/index.html
@@ -231,7 +231,7 @@
     </p>
 
     <p>
-    My analog images are captured on 35mm and medium-format film, as well as directly to black and white negative photopaper. I make silver gelatin prints through traditional optical enlargement. 
+    My analog images are captured on 35mm and medium-format film, as well as directly on black and white negative photopaper. I make silver gelatin prints through traditional optical enlargement. 
     </p>
 
     <h2>Services</h2>
