mobile bio image wrap fix?

--- a/about/index.html
+++ b/about/index.html
@@ -123,9 +123,9 @@
       height: auto;
       display: block;
       margin: var(--indacar-offset-top) var(--indacar-text-gap-right) var(--indacar-offset-bottom) var(--indacar-offset-left);
-      -webkit-shape-outside: url("/assets/about/indacar-small.png");
-      shape-outside: url("/assets/about/indacar-small.png");
-      shape-image-threshold: 0.25;
+      -webkit-shape-outside: url("/assets/about/inthecar.webp");
+      shape-outside: url("/assets/about/inthecar.webp");
+      shape-image-threshold: 0.9;
       shape-margin: var(--indacar-shape-margin);
     }
 /* 
